--- a/.github/workflows/f1.yml
+++ b/.github/workflows/f1.yml
@@ -2,6 +2,7 @@ name: DeployApp
 on: push
 jobs:
   deploy:
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/upload-artifact@v3
